feat(presentation): adds the final task given in the presentation
