# src/swagger/swagger.yaml
@@ -48,6 +48,10 @@ components:
           type: boolean
           description: If this is one of the favorites musics of the user
           example: true
+        views:
+          type: integer
+          description: Views counter of the music.
+          example: 1240
         createdAt:
           type: string
           format: date-time
@@ -443,6 +447,38 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/NotFound'
+        '500':
+          description: InternalServerError
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/InternalServerError'
+  /music/order/views:
+    get:
+      summary: View most viewed musics
+      description: Returns information about all songs
+      tags:
+        - Music
+      operationId: get_all_music
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MusicList'
+        '400':
+          description: BadRequest
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/BadRequest'
+        '403':
+          description: Forbidden
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Forbidden'
         '500':
           description: InternalServerError
           content:
